--- a/admin.html
+++ b/admin.html
@@ -60,7 +60,7 @@
 
         // --- APNI API KEY YAHAN DALO ---
         const URL = 'https://ihxdiydlnzpncqdylsla.supabase.co';
-        const KEY = 'Sb_publishable_lOpan6CsYv4S4HDu4tZ-bA_nJUPKTdl';
+        const KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImloeGRpeWRsbnpwbmNxZHlsc2xhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njg5Njg0NDcsImV4cCI6MjA4NDU0NDQ0N30.BYj3iokkcNC88u_xrFRvbFnSdpqbLz_ZWP_zvNWfamc';
         const supabase = createClient(URL, KEY);
 
         // Login System
