--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="hi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +11,12 @@
 
     <header class="royal-header">
         <div class="pattern-top"></div>
-        <h1 class="brand-name">✨ Padharo Mhare Store ✨</h1>
-        <p class="tagline">Best Deals, Seedhe Amazon Se</p>
+        <h1 class="brand-name">✨ NS SHOP STORE ✨</h1>
+        
+        <div class="search-container">
+            <input type="text" id="search-box" placeholder="Search phones, watches...">
+            <button onclick="runSearch()">🔍</button>
+        </div>
     </header>
 
     <main class="container">
