--- a/admin.html
+++ b/admin.html
@@ -89,7 +89,7 @@
             const pass = document.getElementById('admin-pass').value;
 
             // YAHAN APNA ID AUR PASSWORD SET KAREIN 👇
-            if(id === "hukum" && pass === "admin123") {
+            if(id === "nsshop@admin" && pass === "Choudhary7494&") {
                 localStorage.setItem('hukum_logged_in', 'true');
                 showDashboard();
             } else {
