--- a/index.html
+++ b/index.html
@@ -3,53 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    
     <title>NS Shop - Royal Artifacts</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header class="royal-header">
-        <div class="ns-logo-container">
-            <div class="ns-logo-text">NS</div>
-            <span class="shop-text">SH🛒P</span>
-        </div>
-
-        <div class="search-container">
-            <input type="text" id="search-box" placeholder="Search...">
-            <button class="search-btn" onclick="runSearch()">🔍</button>
-        </div>
-
-        <div style="margin-top: 15px;">
-            <a href="contact.html" style="color:var(--dark-maroon); font-weight:bold; text-decoration:none; border-bottom: 1px dashed var(--dark-maroon);">
-                📞 Contact Us
-            </a>
-        </div>
-    </header>
-
-    <main class="container">
-        <div id="product-feed" class="feed-grid">
-            <div style="text-align:center; padding: 50px;">
-                <div style="font-size:2rem; animation:spin 1s infinite;">⏳</div>
-                <p>Loading Royal Collection...</p>
+    <div class="page-wrapper">
+        
+        <header class="royal-header">
+            <div class="ns-logo-container">
+                <div class="ns-logo-text">NS</div>
+                <span class="shop-text">SH🛒P</span>
             </div>
-        </div>
-    </main>
 
-    <footer class="royal-footer">
-        <div class="ns-logo-text" style="font-size: 2.5rem;">NS</div>
-        <div style="margin: 20px 0;">
-            <div class="footer-links">
-                <a href="#">Home</a> • 
-                <a href="#">Jewelry</a> • 
-                <a href="#">Textiles</a> • 
-                <a href="contact.html">Contact</a>
+            <div class="search-container">
+                <input type="text" id="search-box" placeholder="Search...">
+                <button class="search-btn" onclick="runSearch()">🔍</button>
             </div>
-        </div>
-        <p>© 2026 NS Shop • Rajasthan</p>
-    </footer>
 
-    <script type="module" src="app.js"></script>
+            <div style="margin-top: 15px;">
+                <a href="contact.html" style="color:var(--dark-maroon); font-weight:bold; text-decoration:none; border-bottom: 1px dashed var(--dark-maroon);">
+                    📞 Contact Us
+                </a>
+            </div>
+        </header>
+
+        <main class="container">
+            <div id="product-feed" class="feed-grid">
+                <div class="loading-box">
+                    <div style="font-size:2rem; animation:spin 1s infinite;">⏳</div>
+                    <p>Loading Royal Collection...</p>
+                </div>
+            </div>
+        </main>
+
+        <footer class="royal-footer">
+            <div class="ns-logo-text" style="font-size: 2.5rem;">NS</div>
+            <div style="margin: 20px 0;">
+                <a href="#" style="color:var(--dark-maroon); text-decoration:none; font-weight:bold;">Home</a> • 
+                <a href="contact.html" style="color:var(--dark-maroon); text-decoration:none; font-weight:bold;">Contact</a>
+            </div>
+            <p>© 2026 NS Shop • Rajasthan</p>
+        </footer>
+
+    </div> <script type="module" src="app.js"></script>
 
 </body>
 </html>
-
