--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
     <header class="royal-header">
         <div class="pattern-top"></div>
-        <h1 class="brand-name">✨ Sampark Kaksh ✨</h1> <a href="index.html" class="back-link">⬅️ Dukan Par Wapas Jayein</a>
+        <h1 class="brand-name">✨ Contact Us ✨</h1> <a href="index.html" class="back-link">⬅️ Shop Par Wapas Jayein</a>
     </header>
 
     <main class="container">
