--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="page-wrapper">
         <header class="royal-header">
             <div class="ns-logo-container">
-                <div class="ns-logo-text">NS</div>
-                <span class="shop-text">SH🛒P</span>
+                <div class="ns-logo-text">NS SH🛒P</div>
+                <span class="shop-text">BEST DEALS🎁</span>
             </div>
 
             <div class="search-container">
