--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="hi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
-    <title>NS Shop - Royal Artifacts</title>
+    <title>NS Shop - Best Online Deals & Royal Artifacts</title>
+    
+    <link rel="icon" type="image/png" href="favicon.png">
+
+    <meta name="description" content="Welcome to NS Shop. Find the best deals on electronics, gadgets, and royal artifacts. Your trusted online store in India.">
+
     <link rel="stylesheet" href="style.css">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "OnlineStore",
+      "name": "NS Shop",
+      "url": "https://nsshop.in",
+      "logo": "https://nsshop.in/favicon.png",
+      "description": "Best online deals and royal artifacts store.",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://nsshop.in/?search={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
 </head>
 <body>
 
