--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <link rel="icon" type="image/png" href="favicon.png">
 
-    <meta name="description" content="Welcome to NS Shop (Nitin's Store). Find the best deals on electronics, gadgets, and royal artifacts. Your trusted online store in Rajasthan, India.">
+    <meta name="description" content="Welcome to NS Shop (Sahil's Store). Find the best deals on electronics, gadgets, and royal artifacts. Your trusted online store in Rajasthan, India.">
 
     <meta name="keywords" content="NS Shop, sahil nsshop, NS Store,nsshop, Online Shopping, Royal Artifacts, Best Deals, Electronics, Rajasthan Shop, nsshop.in">
 
