--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     
     <link rel="icon" type="image/png" href="favicon.png">
 
-    <meta name="description" content="Welcome to NS Shop (Sahil's Store). Find the best deals on electronics, gadgets, and royal artifacts. Your trusted online store in Rajasthan, India.">
+    <meta name="description" content="Welcome to NS Shop (nitin's Store). Find the best deals on electronics, gadgets, and royal artifacts. Your trusted online store in Rajasthan, India.">
 
-    <meta name="keywords" content="NS Shop, sahil nsshop, NS Store,nsshop, Online Shopping, Royal Artifacts, Best Deals, Electronics, Rajasthan Shop, nsshop.in">
+    <meta name="keywords" content="NS Shop, nitin nsshop, NS Store,nsshop, Online Shopping, Royal Artifacts, Best Deals, Electronics, Rajasthan Shop, nsshop.in">
 
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://nsshop.in/">
